feat: add header

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" defer>
-    <title>Document</title>
+    <title>Cleaning</title>
 </head>
 <body>
 
@@ -32,6 +32,26 @@
         </div>
     </div>
     <!-- /.info -->
+    <header class="header">
+        <div class="container block">
+            <div class="header-logo">
+                <a href="#" class="header-logo__item">
+                    <img src="./img/logo.png" alt="логотип" class="header-logo__img" width="103px" height="103px">
+                </a>
+            </div>
+            <nav class="header-nav">
+                <a href="#" class="header-nav__item header-nav__item--main">Главная</a>
+                <a href="#" class="header-nav__item">Услуги</a>
+                <a href="#" class="header-nav__item">Какулькулятор стоимости</a>
+                <a href="#" class="header-nav__item">О компании</a>
+                <a href="#" class="header-nav__item">Контакты</a>
+            </nav>
+            <div class="header-call">
+                <a href="#" class="header-call__item">+7 (918) 565-75-36</a>
+            </div>
+        </div>
+    </header>
+    <!-- /.header -->
     
 </body>
 </html>
