feat: add promo

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
         </div>
     </header>
     <!-- /.header -->
+    <div class="promo">
+        <div class="container">
+            <div class="promo-block">
+                <span class="promo-block__inscript inscript">Лучший клинговый сервис</span>
+                <h1 class="promo-block__title title">Клининговая компания <br>Лучшие услуги</h1>
+                <p class="promo-block__desc desc">Обратившись в нашу клининговую компанию вы получите клининговые услуги на высочайшем уровне, и индивидуальный подход к каждому клиенту.</p>
+                <button class="promo-block__button button">Заказать уборку</button>
+            </div>
+        </div>
+    </div>
+    <!-- /.promo -->
     
 </body>
 </html>
