feat: add promo

--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
     </header>
     <!-- /.header -->
     <div class="promo">
-        <div class="container">
+        <div class="container block">
             <div class="promo-block">
-                <span class="promo-block__inscript inscript">Лучший клинговый сервис</span>
-                <h1 class="promo-block__title title">Клининговая компания <br>Лучшие услуги</h1>
+                <sup class="promo-block__up up">Лучший клинговый сервис</sup>
+                <h1 class="promo-block__title title">Клининговая компания <br>Лучшие <span class="promo-block__text">услуги</span></h1>
                 <p class="promo-block__desc desc">Обратившись в нашу клининговую компанию вы получите клининговые услуги на высочайшем уровне, и индивидуальный подход к каждому клиенту.</p>
                 <button class="promo-block__button button">Заказать уборку</button>
+            </div>
+            <div class="promo-img">
+                <div class="promo-img__img1"></div>
+                <div class="promo-img__img2"></div>
+                <div class="promo-img__img3"></div>
             </div>
         </div>
     </div>
