feat: add :hover for button, add services

--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
         </div>
     </div>
     <!-- /.promo -->
+    <div class="services">
+        <div class="container">
+            <div class="services-box">
+                <sup class="services-up up">Услуги</sup>
+                <h2 class="services-title title">Наши услуги</h2>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="./img/card1.png" alt="картинка" class="card-img">
+                    <h3 class="card-title title">Уборка квартир</h3>
+                    <p class="card-desc desc">Профессиональная уборка квартир</p>
+                    <p class="card-desc desc">Генеральная уборка квартиры</p>
+                    <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.services -->
     
 </body>
 </html>
