feat: add sec services

--- a/index.html
+++ b/index.html
@@ -76,11 +76,70 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <img src="./img/card1.png" alt="картинка" class="card-img">
-                    <h3 class="card-title title">Уборка квартир</h3>
-                    <p class="card-desc desc">Профессиональная уборка квартир</p>
-                    <p class="card-desc desc">Генеральная уборка квартиры</p>
-                    <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="card-img">
+                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text">
+                        <h3 class="card-title title">Уборка квартир</h3>
+                        <p class="card-desc desc">Профессиональная уборка квартир</p>
+                        <p class="card-desc desc">Генеральная уборка квартиры</p>
+                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    </div>
                 </div>
             </div>
         </div>
