feat: add :after in card

--- a/index.html
+++ b/index.html
@@ -88,57 +88,60 @@
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                        <img src="./img/2.png" alt="картинка" class="card-img1" width="276px" height="276px">
                     </div>
                     <div class="card-text">
-                        <h3 class="card-title title">Уборка квартир</h3>
-                        <p class="card-desc desc">Профессиональная уборка квартир</p>
-                        <p class="card-desc desc">Генеральная уборка квартиры</p>
-                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                        <h3 class="card-title title">Уборка коттеджей</h3>
+                        <p class="card-desc desc">Уборка коттеджей и частных домов</p>
+                        <p class="card-desc desc">Генеральная уборка коттеджей</p>
+                        <p class="card-desc desc">Уборка коттеджей после ремонта</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                        <img src="./img/3.png" alt="картинка" class="card-img1" width="276px" height="276px">
                     </div>
                     <div class="card-text">
-                        <h3 class="card-title title">Уборка квартир</h3>
-                        <p class="card-desc desc">Профессиональная уборка квартир</p>
-                        <p class="card-desc desc">Генеральная уборка квартиры</p>
-                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                        <h3 class="card-title title">Уборка офисов</h3>
+                        <p class="card-desc desc">Профессиональная уборка офисов</p>
+                        <p class="card-desc desc">Генеральная уборка офисов</p>
+                        <p class="card-desc desc">Уборка офисов после ремонта</p>
                     </div>
                 </div>
                 <div class="card card2">
                     <div class="card-img">
-                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                        <img src="./img/4.png" alt="картинка" class="card-img1" width="276px" height="276px">
                     </div>
-                    <div class="card-text">
-                        <h3 class="card-title title">Уборка квартир</h3>
-                        <p class="card-desc desc">Профессиональная уборка квартир</p>
-                        <p class="card-desc desc">Генеральная уборка квартиры</p>
-                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
-                    </div>
-                </div>
-                <div class="card card2">
-                    <div class="card-img">
-                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
-                    </div>
-                    <div class="card-text">
-                        <h3 class="card-title title">Уборка квартир</h3>
-                        <p class="card-desc desc">Профессиональная уборка квартир</p>
-                        <p class="card-desc desc">Генеральная уборка квартиры</p>
-                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    <div class="card-text card-text2">
+                        <h3 class="card-title title">Химчистка</h3>
+                        <p class="card-desc desc">Химчистка ковров на дому</p>
+                        <p class="card-desc desc">Химчистка ковров с вывозом в цех</p>
+                        <p class="card-desc desc">Химчистка мягкой мебели</p>
+                        <p class="card-desc desc">Химчистка матрасов на дому</p>
                     </div>
                 </div>
                 <div class="card card2">
                     <div class="card-img">
-                        <img src="./img/1.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                        <img src="./img/5.png" alt="картинка" class="card-img1" width="276px" height="276px">
                     </div>
-                    <div class="card-text">
-                        <h3 class="card-title title">Уборка квартир</h3>
-                        <p class="card-desc desc">Профессиональная уборка квартир</p>
-                        <p class="card-desc desc">Генеральная уборка квартиры</p>
-                        <p class="card-desc desc">Уборка квартиры после ремонта</p>
+                    <div class="card-text card-text2">
+                        <h3 class="card-title title">Чистка бассейнов</h3>
+                        <p class="card-desc desc">Профессиональная чистка бассейнов</p>
+                        <p class="card-desc desc">Чистка душевых кабин</p>
+                        <p class="card-desc desc">Чистка сауны, хамам, бани</p>
+                        <p class="card-desc desc">Экологическая уборка</p>
+                    </div>
+                </div>
+                <div class="card card2">
+                    <div class="card-img">
+                        <img src="./img/6.png" alt="картинка" class="card-img1" width="276px" height="276px">
+                    </div>
+                    <div class="card-text card-text2">
+                        <h3 class="card-title title">Мойка фасадов</h3>
+                        <p class="card-desc desc">Чистка кондиционеров</p>
+                        <p class="card-desc desc">Озонирование и Дезинфекция</p>
+                        <p class="card-desc desc">Размывка пола после ремонта</p>
+                        <p class="card-desc desc">Мытье окон, витрин, фасадов</p>
                     </div>
                 </div>
             </div>
