feat: add sec calculator

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- /.promo -->
     <div class="services">
         <div class="container">
-            <div class="services-box">
+            <div class="content-box">
                 <sup class="services-up up">Услуги</sup>
                 <h2 class="services-title title">Наши услуги</h2>
             </div>
@@ -148,6 +148,140 @@
         </div>
     </div>
     <!-- /.services -->
-    
+    <div class="calculator">
+        <div class="container">
+            <div class="content-box">
+                <sup class="services-up up">Калькулятор</sup>
+                <h2 class="services-title title">Калькулятор стоимости</h2>
+            </div>
+            <div class="calculator-baza container">
+                <div class="calculator-top">
+                    <div class="calculator-header__box">
+                        <h2 class="calculator-title title">Тип помещения</h2>
+                        <div class="calculator-title__button">
+                            <p class="calculator-desc desc">Уборка коттеджа</p>
+                            <div class="calculator-ar"></div>
+                        </div>
+                    </div>
+                    <div class="calculator-header__box">
+                        <h2 class="calculator-title title">Тип уборки</h2>
+                        <div class="calculator-title__button">
+                            <p class="calculator-desc desc">Уборка коттеджа</p>
+                            <div class="calculator-ar"></div>
+                        </div>
+                    </div>
+                    <div class="calculator-header__box">
+                        <h2 class="calculator-title title">Площадь помещения</h2>
+                        <div class="calculator-title__button">
+                            <p class="calculator-desc calculator-desc2 desc">10 ( м² )</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="calculator-bottom1">
+                    <div class="calculator-bottom__box">
+                        <div class="calculator-cards">
+                            <div class="calculator-card calculator-card__blue">
+                                <p class="calculator-card__desc calculator-card-text desc">Количество санузлов</p>
+                                <span class="calculator-card__desc desc">Один санузел входит<br> в базовую стоимость</span>
+                                <div class="calculator-card__quantity">
+                                    <img src="./img/less.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card calculator-card3">
+                                <p class="calculator-card__desc  calculator-card-text desc">Точную стоимость уточняйте у менеджера</p>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <div class="calculator-card">
+                                <p class="calculator-card__desc calculator-card-text desc">Мойка окон</p>
+                                <span class="calculator-card__desc calculator-card__desc2 desc">от 250 ₽/шт</span>
+                                <div class="calculator-card__quantity calculator-card__quantity2">
+                                    <img src="./img/less-b.png" alt="минус" class="card-less">
+                                    <p class="calculator-card__number">1</p>
+                                    <img src="./img/more-b.png" alt="плюс" class="card-more">
+                                </div>
+                                <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
+                            </div>
+                            <p class="calculator-bt">Закажите уборку помещения и узнайте о вашей<br> персональной скидке</p>
+                        </div>
+                    </div>
+                    <div class="calculator-bottom__box2"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.calculator -->
 </body>
 </html>
