feat: add in calculator

--- a/index.html
+++ b/index.html
@@ -274,10 +274,15 @@
                                 </div>
                                 <img src="./img/quest-b.png" alt="вопрос" class="card-quest">
                             </div>
-                            <p class="calculator-bt">Закажите уборку помещения и узнайте о вашей<br> персональной скидке</p>
+                            <!-- <p class="calculator-bt">Закажите уборку помещения и узнайте о вашей<br> персональной скидке</p> -->
                         </div>
                     </div>
-                    <div class="calculator-bottom__box2"></div>
+                    <div class="calculator-bottom__box2">
+                        <div class="calculator-bottom-title title">
+                            <p class="calculator-bottom-title2">Стоимость услуг</p>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
